Key:
+ Added Content/Feature.
~ Changed Content/Feature or Bugfix.
- Removed Content/Feature.

~~~~~~~~~~~~0.0.1 Revitalize 11-5-2022 xx.xx P.M~~~~~~~~~~~~~~
-Removed Strings in base mod folder
+Added Revitalize Content Packs which are currently used for loading strings based on the game's current locale. Allows for translations of the mod's content.

~~~~~~~~~~~~0.0.1 Revitalize 11-3-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added Burner Mining Drill Blueprints sold by Clint when the bottom of the mines are reached.
+Added Electric Mining Drill Blueprints sold by Clint when the bottom of the mines are reached and a battery pack has been obtaied.
+Added Nuclear Mining Drill Blueprints sold by Qi's Walnut Room.
+Added Magical Mining Drill Blueprints sold by Qi's Walnut Room.


~~~~~~~~~~~~0.0.1 Revitalize 10-31-2022 xx.xx P.M~~~~~~~~~~~~~~
+The radioactive fuel cell blueprint can now be bought from Qi's wallnut room shop for 5 qi gems.
+Added Coal, Nuclear, and Magical mining drills.

~~~~~~~~~~~~0.0.1 Revitalize 10-30-2022 xx.xx P.M~~~~~~~~~~~~~~
+Verified that minging drills work.
~Changed Electric Mining Drill graphic
~Machine Status bubbles now render properly above the machine.

~~~~~~~~~~~~0.0.1 Revitalize 10-26-2022 xx.xx P.M~~~~~~~~~~~~~~
+Created PoweredMachine.cs which is the base for all machines that consume fuel as well as consolidate the common logic there so that it's not scattered across all of the classes again.
+Created new PoweredMachineTier Coal tier which uses coal to operate as an early game solution for some machines.
+Added more display strings for ElectricMiningDrill
~Replaced error strings file for ElectricFurnace with machine common error strings.
~Added ability to distinguish if fuel must be an active object or not to be consumed.
+Added small easter egg when placing mining drills on wooden floors.


~~~~~~~~~~~~0.0.1 Revitalize 10-24-2022 xx.xx P.M~~~~~~~~~~~~~~
+Started work on the Mining Drill.
