@@ -1,0 +1,10 @@
+{
+	"mailTitle":"Revitalize.Blacksmith.MiningDrillsAvailableForPurchase",
+	"message":"@, ^I heard that you reached the bottom of the mines. I know going through them all the time is hard work and exhausting so I wanted to sell you the blueprints to build your own mining drills. Hopefully this makes your life easier and don't forget you can always come to me if you get any geodes from them. ^ -Clint",
+	"itemReference":{
+		"stardewValleyItemId": "NULL",
+		"stardewValleyBigCraftableId": "NULL",
+		"registeredObjectId": "",
+		"amount": 1
+	},
+}
