@@ -1,0 +1,10 @@
+{
+	"mailTitle":"Revitalize.MovieTheater.SeasonalTicketsFromSubscription",
+	"message":"@, ^ Thank you for subscribing to the Pelican Town Movie Theater Experience. We hope to continue to provide great shows and even greater service. ^ -Pelican Town Movie Theater",
+	"itemReference":{
+		"stardewValleyItemId": "MovieTicket",
+		"stardewValleyBigCraftableId": "NULL",
+		"registeredObjectId": "",
+		"amount": 2
+	},
+}
