@@ -1,0 +1,7 @@
+{
+	"Revitalize.Framework.World.Objects.Items.Misc.MovieTheaterTicketSubscription":
+	{
+		"displayName":"Movie Ticket Subscription",
+		"description":"Buy a movie ticket subscription to the Pelican Town Movie Theater to get two free tickets sent to your mail at the beginning of every season!"
+	},
+}
