@@ -1,0 +1,19 @@
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Omegasis.Revitalize.Framework.Configs.ShopConfigs
+{
+    public class MovieTheaterShopConfig
+    {
+        public int MovieTicketSubscriptionPrice = 5000;
+
+        public MovieTheaterShopConfig()
+        {
+
+        }
+
+    }
+}
